--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
       <div class="card">
         <div class="card-bio">
           <div class="img-wrapper">
-            <img src="images/person.jpg" alt="Person" width="100" />
+            <img src="images/person.jpg" alt="Person" />
           </div>
           <div class="person-info">
             <h3>John Doe</h3>
@@ -34,42 +34,42 @@
             </p>
           </div>
           <button class="card-btn">
-            <span class="card-btn-content">Contact Me</span>
+            <span class="card-btn-contact">Contact Me</span>
             <i class="fas fa-angle-up"></i>
           </button>
         </div>
-        <div class="card-content">
+        <div class="card-contact">
           <h4>Contact Me</h4>
         </div>
         <div class="card-social email">
           <div class="icon-wrapper">
             <i class="fas fa-envelope"></i>
           </div>
-          <div class="content-details">
+          <div class="contact-details">
             <h4>Email</h4>
             <p>johndoe@email.com</p>
-            <span>></span>
           </div>
+          <span>></span>
         </div>
         <div class="card-social fb">
           <div class="icon-wrapper">
             <i class="fab fa-facebook-square"></i>
           </div>
-          <div class="content-details">
+          <div class="contact-details">
             <h4>Facebook</h4>
             <p>John Doe</p>
-            <span>></span>
           </div>
+          <span>></span>
         </div>
-        <div class="card-social linkin">
+        <div class="card-social linkedin">
           <div class="icon-wrapper">
             <i class="fab fa-linkedin"></i>
           </div>
-          <div class="content-details">
+          <div class="contact-details">
             <h4>LinkedIn</h4>
             <p>@johndoe</p>
-            <span>></span>
           </div>
+          <span>></span>
         </div>
       </div>
     </div>
